compilateurDeca/src/test/deca/context/invalid/objet/methods/cond_bool_avec_objet.deca
// Description:
//    Test de contexte : condition non booléenne.
//
// Resultats:
//    Erreur contextuelle : Type attendu boolean, trouvé A (ou null).
//
// Historique:
//    cree le 13/01/2026

class A {}
{
    A a = new A();
    if (a) {
        println("non");
    }
}